--- a/ProjectContent/project.yml
+++ b/ProjectContent/project.yml
@@ -19,7 +19,7 @@ settings:
     ENABLE_USER_SCRIPT_SANDBOXING: 'NO'
     SWIFT_EMIT_LOC_STRINGS: 'NO'
     LOCALIZED_STRING_SWIFTUI_SUPPORT: 'NO'
-    PRODUCT_BUNDLE_IDENTIFIER: com.edyuto.$(PRODUCT_NAME)
+    PRODUCT_BUNDLE_IDENTIFIER: __PROJECTBUNDLEPREFIX__.$(PRODUCT_NAME)
     PRODUCT_NAME: $(TARGET_NAME)
 
     # Target
@@ -29,7 +29,7 @@ settings:
     # Signing
     CODE_SIGN_STYLE: Automatic
     CODE_SIGN_IDENTITY: iPhone Developer
-    DEVELOPMENT_TEAM: 2X5PWXY74F
+    DEVELOPMENT_TEAM: __PROJECTDEVELOPMENTTEAM__
     PROVISIONING_PROFILE:
     PROVISIONING_PROFILE_SPECIFIER:
   configs:
